Upgraded to Spring Boot 2.5.0.